infrastructure/quay_db.tf
# Get latest snapshot from production DB
/* data "aws_db_snapshot" "db_snapshot" {
  db_snapshot_identifier = var.db_snapshot_identifier
} */

resource "aws_db_instance" "quay_db" {
  identifier             = "${var.prefix}-quay-db"
  instance_class         = "db.r5.2xlarge"
  allocated_storage      = 5500
  engine                 = "mysql"
  engine_version         = "5.7.37"
  username               = "${var.mysql_db_username}"
  password               = var.db_password
  db_subnet_group_name   = aws_db_subnet_group.db_subnet_group.name
  vpc_security_group_ids = [aws_security_group.db_security_group.id]
  parameter_group_name   = aws_db_parameter_group.quay_db_prameter_group.name
  publicly_accessible    = true
  skip_final_snapshot    = true
  auto_minor_version_upgrade = false
  apply_immediately = true
  storage_encrypted = true

  db_name                = "${var.db_name}"
  multi_az = var.quay_db_multi_az
  tags = {
    Deployment = "${var.prefix}"
  }

  replicate_source_db = var.deploy_type == "secondary" ? var.primary_db_arn : null
  backup_retention_period = 5

  snapshot_identifier = var.db_snapshot_identifier

  lifecycle {
    ignore_changes = [
      snapshot_identifier,
    ]
  }

  timeouts {
    create = "2h"
    update = "2h"
    delete = "2h"
  }

}

resource "aws_db_parameter_group" "quay_db_prameter_group" {
  name   = "${var.prefix}-quay-db-parameter-group"
  family = "mysql5.7"

  tags = {
    Deployment = "${var.prefix}"
  }

  parameter {
    name  = "binlog_format"
    value = "ROW"
  }
}

# Aurora

resource "aws_rds_global_cluster" "quay_aurora" {
  global_cluster_identifier = "${var.prefix}-aurora-db"
  engine                    = "aurora-postgresql"
  engine_version            = "${var.aurora_version}"
  database_name             = "quay"
}

resource "aws_rds_cluster_parameter_group" "aurora_pg" {
  name        = "${var.prefix}-pg"
  family      = "aurora-postgresql14"
  description = "Aurora RDS param group for ${var.prefix}"

  parameter {
    name  = "rds.logical_replication"
    value = "1"
    apply_method = "immediately"
  }

  parameter {
    name  = "wal_sender_timeout"
    value = "0"
    apply_method = "immediately"
  }
}

resource "aws_rds_cluster" "primary" {
  engine                    = aws_rds_global_cluster.quay_aurora.engine
  engine_version            = aws_rds_global_cluster.quay_aurora.engine_version
  engine_mode               = "provisioned"
  cluster_identifier        = "${var.prefix}-primary-db"
  master_username           = "quay"
  master_password           = "${var.db_password}"
  database_name             = "quay"
  global_cluster_identifier = aws_rds_global_cluster.quay_aurora.id
  db_subnet_group_name      = aws_db_subnet_group.db_subnet_group.name
  vpc_security_group_ids = [aws_security_group.db_security_group.id]
  apply_immediately = true
  skip_final_snapshot = true
  db_instance_parameter_group_name = aws_rds_cluster_parameter_group.aurora_pg.name

  serverlessv2_scaling_configuration {
    max_capacity = 2.0
    min_capacity = 0.5
  }
}

resource "aws_rds_cluster_instance" "primary" {
  engine               = aws_rds_global_cluster.quay_aurora.engine
  engine_version       = aws_rds_global_cluster.quay_aurora.engine_version
  identifier           = "${var.prefix}-primary-db-instance"
  cluster_identifier   = aws_rds_cluster.primary.id
  instance_class       = "db.serverless"
  db_subnet_group_name = aws_db_subnet_group.db_subnet_group.name
}
